// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select component sanity matches danger variant snapshot 1`] = `
<StyledComponent
  border="1"
  borderRadius={1}
  fontFamily="sansSerif"
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "sc-EHOje",
        "isStatic": false,
        "rules": Array [
          "
  & {
    box-sizing: border-box;
  }
  ",
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          "
  ",
          [Function],
          "
  ",
          "
  ",
          [Function],
          "
",
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "

  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
",
          "
  ",
          [Function],
          "

  & {
  }

  a {
    font-size: inherit;
    cursor: pointer;
    color: inherit;
    &:hover {
      color: inherit;
    }
  }
",
        ],
      },
      "defaultProps": Object {
        "border": "1",
        "borderRadius": 1,
        "fontFamily": "sansSerif",
        "p": "3",
        "theme": Object {
          "borderWidths": Array [
            "0",
            "1px",
            "2px",
            "4px",
          ],
          "borders": Array [
            0,
            "1px solid transparent",
          ],
          "colors": Object {
            "black": "#000e1a",
            "blacks": Array [
              "rgba(0,0,0,.0125)",
              "rgba(0,0,0,.025)",
              "rgba(0,0,0,.05)",
              "rgba(0,0,0,.1)",
              "rgba(0,0,0,.2)",
              "rgba(0,0,0,.3)",
              "rgba(0,0,0,.4)",
              "rgba(0,0,0,.5)",
              "rgba(0,0,0,.6)",
              "rgba(0,0,0,.7)",
              "rgba(0,0,0,.8)",
              "rgba(0,0,0,.9)",
            ],
            "blue": "#007ce0",
            "copyColor": "#3F3D4B",
            "dark-gray": "#333",
            "grey": "#CCC",
            "light-gray": "#eee",
            "light-silver": "#aaa",
            "mid-gray": "#555",
            "moon-gray": "#ccc",
            "navy": "#004175",
            "near-black": "#111",
            "near-white": "#f4f4f4",
            "primary": "#4E3FCE",
            "silver": "#999",
            "transparent": "transparent",
            "white": "#fff",
            "whites": Array [
              "rgba(255,255,255,.0125)",
              "rgba(255,255,255,.025)",
              "rgba(255,255,255,.05)",
              "rgba(255,255,255,.1)",
              "rgba(255,255,255,.2)",
              "rgba(255,255,255,.3)",
              "rgba(255,255,255,.4)",
              "rgba(255,255,255,.5)",
              "rgba(255,255,255,.6)",
              "rgba(255,255,255,.7)",
              "rgba(255,255,255,.8)",
              "rgba(255,255,255,.9)",
            ],
          },
          "fontSizes": Array [
            12,
            14,
            16,
            20,
            24,
            32,
            48,
            64,
          ],
          "fontWeights": Array [
            0,
            300,
            400,
            600,
            700,
          ],
          "fonts": Object {
            "sansSerif": "\\"Source Sans Pro\\", -apple-system, sans-serif",
            "serif": "athelas, georgia, times, serif",
          },
          "heights": Array [
            0,
            16,
            32,
            64,
            128,
            256,
          ],
          "letterSpacings": Array [
            0,
            1,
            2,
            4,
            8,
          ],
          "lineHeights": Object {
            "copy": 1.5,
            "solid": 1,
            "title": 1.25,
          },
          "maxHeights": Array [
            0,
            16,
            32,
            64,
            128,
            256,
          ],
          "maxWidths": Array [
            0,
            16,
            32,
            64,
            128,
            256,
            512,
            768,
            1024,
            1536,
          ],
          "messageStyle": Object {
            "base": Object {
              "backgroundColor": "#f6f6f6",
              "borderColor": "#AAA",
              "color": "#666",
            },
            "danger": Object {
              "backgroundColor": "#fbe9e7",
              "borderColor": "#DC2C10",
              "color": "#841a09",
            },
            "info": Object {
              "backgroundColor": "#eaf6fd",
              "borderColor": "#36ADF1",
              "color": "#206790",
            },
            "success": Object {
              "backgroundColor": "#e9f8f2",
              "borderColor": "#28C081",
              "color": "#18734d",
            },
            "warning": Object {
              "backgroundColor": "#fef5e9",
              "borderColor": "#FD9D28",
              "color": "#975e18",
            },
          },
          "minHeights": Array [
            0,
            16,
            32,
            64,
            128,
            256,
          ],
          "minWidths": Array [
            0,
            16,
            32,
            64,
            128,
            256,
          ],
          "opacity": Object {
            "disabled": 0.4,
          },
          "radii": Array [
            "0",
            "4px",
            "8px",
            "16px",
          ],
          "shadows": Array [
            "0",
            "0px 2px 4px rgba(0, 0, 0, 0.1)",
            "0 7px 14px rgba(50,50,93,.1)",
          ],
          "space": Array [
            0,
            4,
            8,
            16,
            32,
            64,
            128,
            256,
          ],
          "width": Array [
            0,
            16,
            32,
            64,
            128,
            256,
          ],
          "zIndices": Array [
            0,
            9,
            99,
            999,
            9999,
          ],
        },
        "variant": "base",
      },
      "displayName": "Flash",
      "foldedComponentIds": Array [
        "sc-bdVaJa",
        "sc-bwzfXH",
      ],
      "p": Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "sc-bxivhb",
          "isStatic": false,
          "rules": Array [
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "

  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
",
          ],
        },
        "defaultProps": Object {
          "color": "copyColor",
          "fontFamily": "sansSerif",
          "fontSize": 2,
          "fontWeight": 2,
          "lineHeight": "copy",
          "textAlign": "left",
        },
        "displayName": "styled.p",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "sc-bxivhb",
        "target": "p",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      },
      "render": [Function],
      "s": Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "sc-ifAKCX",
          "isStatic": false,
          "rules": Array [
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "

  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
",
          ],
        },
        "defaultProps": Object {
          "color": "copyColor",
          "fontFamily": "sansSerif",
          "fontSize": 2,
          "fontWeight": 2,
          "lineHeight": "copy",
          "textAlign": "left",
        },
        "displayName": "styled.s",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "sc-ifAKCX",
        "target": "s",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      },
      "span": Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "sc-htpNat",
          "isStatic": false,
          "rules": Array [
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "

  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
",
          ],
        },
        "defaultProps": Object {
          "color": "copyColor",
          "fontFamily": "sansSerif",
          "fontSize": 2,
          "fontWeight": 2,
          "lineHeight": "copy",
          "textAlign": "left",
        },
        "displayName": "styled.span",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "sc-htpNat",
        "target": "span",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      },
      "styledComponentId": "sc-EHOje",
      "target": "div",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
  p="3"
  theme={
    Object {
      "borderWidths": Array [
        "0",
        "1px",
        "2px",
        "4px",
      ],
      "borders": Array [
        0,
        "1px solid transparent",
      ],
      "colors": Object {
        "black": "#000e1a",
        "blacks": Array [
          "rgba(0,0,0,.0125)",
          "rgba(0,0,0,.025)",
          "rgba(0,0,0,.05)",
          "rgba(0,0,0,.1)",
          "rgba(0,0,0,.2)",
          "rgba(0,0,0,.3)",
          "rgba(0,0,0,.4)",
          "rgba(0,0,0,.5)",
          "rgba(0,0,0,.6)",
          "rgba(0,0,0,.7)",
          "rgba(0,0,0,.8)",
          "rgba(0,0,0,.9)",
        ],
        "blue": "#007ce0",
        "copyColor": "#3F3D4B",
        "dark-gray": "#333",
        "grey": "#CCC",
        "light-gray": "#eee",
        "light-silver": "#aaa",
        "mid-gray": "#555",
        "moon-gray": "#ccc",
        "navy": "#004175",
        "near-black": "#111",
        "near-white": "#f4f4f4",
        "primary": "#4E3FCE",
        "silver": "#999",
        "transparent": "transparent",
        "white": "#fff",
        "whites": Array [
          "rgba(255,255,255,.0125)",
          "rgba(255,255,255,.025)",
          "rgba(255,255,255,.05)",
          "rgba(255,255,255,.1)",
          "rgba(255,255,255,.2)",
          "rgba(255,255,255,.3)",
          "rgba(255,255,255,.4)",
          "rgba(255,255,255,.5)",
          "rgba(255,255,255,.6)",
          "rgba(255,255,255,.7)",
          "rgba(255,255,255,.8)",
          "rgba(255,255,255,.9)",
        ],
      },
      "fontSizes": Array [
        12,
        14,
        16,
        20,
        24,
        32,
        48,
        64,
      ],
      "fontWeights": Array [
        0,
        300,
        400,
        600,
        700,
      ],
      "fonts": Object {
        "sansSerif": "\\"Source Sans Pro\\", -apple-system, sans-serif",
        "serif": "athelas, georgia, times, serif",
      },
      "heights": Array [
        0,
        16,
        32,
        64,
        128,
        256,
      ],
      "letterSpacings": Array [
        0,
        1,
        2,
        4,
        8,
      ],
      "lineHeights": Object {
        "copy": 1.5,
        "solid": 1,
        "title": 1.25,
      },
      "maxHeights": Array [
        0,
        16,
        32,
        64,
        128,
        256,
      ],
      "maxWidths": Array [
        0,
        16,
        32,
        64,
        128,
        256,
        512,
        768,
        1024,
        1536,
      ],
      "messageStyle": Object {
        "base": Object {
          "backgroundColor": "#f6f6f6",
          "borderColor": "#AAA",
          "color": "#666",
        },
        "danger": Object {
          "backgroundColor": "#fbe9e7",
          "borderColor": "#DC2C10",
          "color": "#841a09",
        },
        "info": Object {
          "backgroundColor": "#eaf6fd",
          "borderColor": "#36ADF1",
          "color": "#206790",
        },
        "success": Object {
          "backgroundColor": "#e9f8f2",
          "borderColor": "#28C081",
          "color": "#18734d",
        },
        "warning": Object {
          "backgroundColor": "#fef5e9",
          "borderColor": "#FD9D28",
          "color": "#975e18",
        },
      },
      "minHeights": Array [
        0,
        16,
        32,
        64,
        128,
        256,
      ],
      "minWidths": Array [
        0,
        16,
        32,
        64,
        128,
        256,
      ],
      "opacity": Object {
        "disabled": 0.4,
      },
      "radii": Array [
        "0",
        "4px",
        "8px",
        "16px",
      ],
      "shadows": Array [
        "0",
        "0px 2px 4px rgba(0, 0, 0, 0.1)",
        "0 7px 14px rgba(50,50,93,.1)",
      ],
      "space": Array [
        0,
        4,
        8,
        16,
        32,
        64,
        128,
        256,
      ],
      "width": Array [
        0,
        16,
        32,
        64,
        128,
        256,
      ],
      "zIndices": Array [
        0,
        9,
        99,
        999,
        9999,
      ],
    }
  }
  variant="danger"
>
  Danger Flash
</StyledComponent>
`;

exports[`Select component sanity matches default snapshot 1`] = `
<StyledComponent
  border="1"
  borderRadius={1}
  fontFamily="sansSerif"
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "sc-EHOje",
        "isStatic": false,
        "rules": Array [
          "
  & {
    box-sizing: border-box;
  }
  ",
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          "
  ",
          [Function],
          "
  ",
          "
  ",
          [Function],
          "
",
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "

  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
",
          "
  ",
          [Function],
          "

  & {
  }

  a {
    font-size: inherit;
    cursor: pointer;
    color: inherit;
    &:hover {
      color: inherit;
    }
  }
",
        ],
      },
      "defaultProps": Object {
        "border": "1",
        "borderRadius": 1,
        "fontFamily": "sansSerif",
        "p": "3",
        "theme": Object {
          "borderWidths": Array [
            "0",
            "1px",
            "2px",
            "4px",
          ],
          "borders": Array [
            0,
            "1px solid transparent",
          ],
          "colors": Object {
            "black": "#000e1a",
            "blacks": Array [
              "rgba(0,0,0,.0125)",
              "rgba(0,0,0,.025)",
              "rgba(0,0,0,.05)",
              "rgba(0,0,0,.1)",
              "rgba(0,0,0,.2)",
              "rgba(0,0,0,.3)",
              "rgba(0,0,0,.4)",
              "rgba(0,0,0,.5)",
              "rgba(0,0,0,.6)",
              "rgba(0,0,0,.7)",
              "rgba(0,0,0,.8)",
              "rgba(0,0,0,.9)",
            ],
            "blue": "#007ce0",
            "copyColor": "#3F3D4B",
            "dark-gray": "#333",
            "grey": "#CCC",
            "light-gray": "#eee",
            "light-silver": "#aaa",
            "mid-gray": "#555",
            "moon-gray": "#ccc",
            "navy": "#004175",
            "near-black": "#111",
            "near-white": "#f4f4f4",
            "primary": "#4E3FCE",
            "silver": "#999",
            "transparent": "transparent",
            "white": "#fff",
            "whites": Array [
              "rgba(255,255,255,.0125)",
              "rgba(255,255,255,.025)",
              "rgba(255,255,255,.05)",
              "rgba(255,255,255,.1)",
              "rgba(255,255,255,.2)",
              "rgba(255,255,255,.3)",
              "rgba(255,255,255,.4)",
              "rgba(255,255,255,.5)",
              "rgba(255,255,255,.6)",
              "rgba(255,255,255,.7)",
              "rgba(255,255,255,.8)",
              "rgba(255,255,255,.9)",
            ],
          },
          "fontSizes": Array [
            12,
            14,
            16,
            20,
            24,
            32,
            48,
            64,
          ],
          "fontWeights": Array [
            0,
            300,
            400,
            600,
            700,
          ],
          "fonts": Object {
            "sansSerif": "\\"Source Sans Pro\\", -apple-system, sans-serif",
            "serif": "athelas, georgia, times, serif",
          },
          "heights": Array [
            0,
            16,
            32,
            64,
            128,
            256,
          ],
          "letterSpacings": Array [
            0,
            1,
            2,
            4,
            8,
          ],
          "lineHeights": Object {
            "copy": 1.5,
            "solid": 1,
            "title": 1.25,
          },
          "maxHeights": Array [
            0,
            16,
            32,
            64,
            128,
            256,
          ],
          "maxWidths": Array [
            0,
            16,
            32,
            64,
            128,
            256,
            512,
            768,
            1024,
            1536,
          ],
          "messageStyle": Object {
            "base": Object {
              "backgroundColor": "#f6f6f6",
              "borderColor": "#AAA",
              "color": "#666",
            },
            "danger": Object {
              "backgroundColor": "#fbe9e7",
              "borderColor": "#DC2C10",
              "color": "#841a09",
            },
            "info": Object {
              "backgroundColor": "#eaf6fd",
              "borderColor": "#36ADF1",
              "color": "#206790",
            },
            "success": Object {
              "backgroundColor": "#e9f8f2",
              "borderColor": "#28C081",
              "color": "#18734d",
            },
            "warning": Object {
              "backgroundColor": "#fef5e9",
              "borderColor": "#FD9D28",
              "color": "#975e18",
            },
          },
          "minHeights": Array [
            0,
            16,
            32,
            64,
            128,
            256,
          ],
          "minWidths": Array [
            0,
            16,
            32,
            64,
            128,
            256,
          ],
          "opacity": Object {
            "disabled": 0.4,
          },
          "radii": Array [
            "0",
            "4px",
            "8px",
            "16px",
          ],
          "shadows": Array [
            "0",
            "0px 2px 4px rgba(0, 0, 0, 0.1)",
            "0 7px 14px rgba(50,50,93,.1)",
          ],
          "space": Array [
            0,
            4,
            8,
            16,
            32,
            64,
            128,
            256,
          ],
          "width": Array [
            0,
            16,
            32,
            64,
            128,
            256,
          ],
          "zIndices": Array [
            0,
            9,
            99,
            999,
            9999,
          ],
        },
        "variant": "base",
      },
      "displayName": "Flash",
      "foldedComponentIds": Array [
        "sc-bdVaJa",
        "sc-bwzfXH",
      ],
      "p": Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "sc-bxivhb",
          "isStatic": false,
          "rules": Array [
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "

  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
",
          ],
        },
        "defaultProps": Object {
          "color": "copyColor",
          "fontFamily": "sansSerif",
          "fontSize": 2,
          "fontWeight": 2,
          "lineHeight": "copy",
          "textAlign": "left",
        },
        "displayName": "styled.p",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "sc-bxivhb",
        "target": "p",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      },
      "render": [Function],
      "s": Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "sc-ifAKCX",
          "isStatic": false,
          "rules": Array [
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "

  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
",
          ],
        },
        "defaultProps": Object {
          "color": "copyColor",
          "fontFamily": "sansSerif",
          "fontSize": 2,
          "fontWeight": 2,
          "lineHeight": "copy",
          "textAlign": "left",
        },
        "displayName": "styled.s",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "sc-ifAKCX",
        "target": "s",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      },
      "span": Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "sc-htpNat",
          "isStatic": false,
          "rules": Array [
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "

  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
",
          ],
        },
        "defaultProps": Object {
          "color": "copyColor",
          "fontFamily": "sansSerif",
          "fontSize": 2,
          "fontWeight": 2,
          "lineHeight": "copy",
          "textAlign": "left",
        },
        "displayName": "styled.span",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "sc-htpNat",
        "target": "span",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      },
      "styledComponentId": "sc-EHOje",
      "target": "div",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
  p="3"
  theme={
    Object {
      "borderWidths": Array [
        "0",
        "1px",
        "2px",
        "4px",
      ],
      "borders": Array [
        0,
        "1px solid transparent",
      ],
      "colors": Object {
        "black": "#000e1a",
        "blacks": Array [
          "rgba(0,0,0,.0125)",
          "rgba(0,0,0,.025)",
          "rgba(0,0,0,.05)",
          "rgba(0,0,0,.1)",
          "rgba(0,0,0,.2)",
          "rgba(0,0,0,.3)",
          "rgba(0,0,0,.4)",
          "rgba(0,0,0,.5)",
          "rgba(0,0,0,.6)",
          "rgba(0,0,0,.7)",
          "rgba(0,0,0,.8)",
          "rgba(0,0,0,.9)",
        ],
        "blue": "#007ce0",
        "copyColor": "#3F3D4B",
        "dark-gray": "#333",
        "grey": "#CCC",
        "light-gray": "#eee",
        "light-silver": "#aaa",
        "mid-gray": "#555",
        "moon-gray": "#ccc",
        "navy": "#004175",
        "near-black": "#111",
        "near-white": "#f4f4f4",
        "primary": "#4E3FCE",
        "silver": "#999",
        "transparent": "transparent",
        "white": "#fff",
        "whites": Array [
          "rgba(255,255,255,.0125)",
          "rgba(255,255,255,.025)",
          "rgba(255,255,255,.05)",
          "rgba(255,255,255,.1)",
          "rgba(255,255,255,.2)",
          "rgba(255,255,255,.3)",
          "rgba(255,255,255,.4)",
          "rgba(255,255,255,.5)",
          "rgba(255,255,255,.6)",
          "rgba(255,255,255,.7)",
          "rgba(255,255,255,.8)",
          "rgba(255,255,255,.9)",
        ],
      },
      "fontSizes": Array [
        12,
        14,
        16,
        20,
        24,
        32,
        48,
        64,
      ],
      "fontWeights": Array [
        0,
        300,
        400,
        600,
        700,
      ],
      "fonts": Object {
        "sansSerif": "\\"Source Sans Pro\\", -apple-system, sans-serif",
        "serif": "athelas, georgia, times, serif",
      },
      "heights": Array [
        0,
        16,
        32,
        64,
        128,
        256,
      ],
      "letterSpacings": Array [
        0,
        1,
        2,
        4,
        8,
      ],
      "lineHeights": Object {
        "copy": 1.5,
        "solid": 1,
        "title": 1.25,
      },
      "maxHeights": Array [
        0,
        16,
        32,
        64,
        128,
        256,
      ],
      "maxWidths": Array [
        0,
        16,
        32,
        64,
        128,
        256,
        512,
        768,
        1024,
        1536,
      ],
      "messageStyle": Object {
        "base": Object {
          "backgroundColor": "#f6f6f6",
          "borderColor": "#AAA",
          "color": "#666",
        },
        "danger": Object {
          "backgroundColor": "#fbe9e7",
          "borderColor": "#DC2C10",
          "color": "#841a09",
        },
        "info": Object {
          "backgroundColor": "#eaf6fd",
          "borderColor": "#36ADF1",
          "color": "#206790",
        },
        "success": Object {
          "backgroundColor": "#e9f8f2",
          "borderColor": "#28C081",
          "color": "#18734d",
        },
        "warning": Object {
          "backgroundColor": "#fef5e9",
          "borderColor": "#FD9D28",
          "color": "#975e18",
        },
      },
      "minHeights": Array [
        0,
        16,
        32,
        64,
        128,
        256,
      ],
      "minWidths": Array [
        0,
        16,
        32,
        64,
        128,
        256,
      ],
      "opacity": Object {
        "disabled": 0.4,
      },
      "radii": Array [
        "0",
        "4px",
        "8px",
        "16px",
      ],
      "shadows": Array [
        "0",
        "0px 2px 4px rgba(0, 0, 0, 0.1)",
        "0 7px 14px rgba(50,50,93,.1)",
      ],
      "space": Array [
        0,
        4,
        8,
        16,
        32,
        64,
        128,
        256,
      ],
      "width": Array [
        0,
        16,
        32,
        64,
        128,
        256,
      ],
      "zIndices": Array [
        0,
        9,
        99,
        999,
        9999,
      ],
    }
  }
  variant="base"
>
  Default Flash
</StyledComponent>
`;

exports[`Select component sanity matches info variant snapshot 1`] = `
<StyledComponent
  border="1"
  borderRadius={1}
  fontFamily="sansSerif"
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "sc-EHOje",
        "isStatic": false,
        "rules": Array [
          "
  & {
    box-sizing: border-box;
  }
  ",
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          "
  ",
          [Function],
          "
  ",
          "
  ",
          [Function],
          "
",
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "

  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
",
          "
  ",
          [Function],
          "

  & {
  }

  a {
    font-size: inherit;
    cursor: pointer;
    color: inherit;
    &:hover {
      color: inherit;
    }
  }
",
        ],
      },
      "defaultProps": Object {
        "border": "1",
        "borderRadius": 1,
        "fontFamily": "sansSerif",
        "p": "3",
        "theme": Object {
          "borderWidths": Array [
            "0",
            "1px",
            "2px",
            "4px",
          ],
          "borders": Array [
            0,
            "1px solid transparent",
          ],
          "colors": Object {
            "black": "#000e1a",
            "blacks": Array [
              "rgba(0,0,0,.0125)",
              "rgba(0,0,0,.025)",
              "rgba(0,0,0,.05)",
              "rgba(0,0,0,.1)",
              "rgba(0,0,0,.2)",
              "rgba(0,0,0,.3)",
              "rgba(0,0,0,.4)",
              "rgba(0,0,0,.5)",
              "rgba(0,0,0,.6)",
              "rgba(0,0,0,.7)",
              "rgba(0,0,0,.8)",
              "rgba(0,0,0,.9)",
            ],
            "blue": "#007ce0",
            "copyColor": "#3F3D4B",
            "dark-gray": "#333",
            "grey": "#CCC",
            "light-gray": "#eee",
            "light-silver": "#aaa",
            "mid-gray": "#555",
            "moon-gray": "#ccc",
            "navy": "#004175",
            "near-black": "#111",
            "near-white": "#f4f4f4",
            "primary": "#4E3FCE",
            "silver": "#999",
            "transparent": "transparent",
            "white": "#fff",
            "whites": Array [
              "rgba(255,255,255,.0125)",
              "rgba(255,255,255,.025)",
              "rgba(255,255,255,.05)",
              "rgba(255,255,255,.1)",
              "rgba(255,255,255,.2)",
              "rgba(255,255,255,.3)",
              "rgba(255,255,255,.4)",
              "rgba(255,255,255,.5)",
              "rgba(255,255,255,.6)",
              "rgba(255,255,255,.7)",
              "rgba(255,255,255,.8)",
              "rgba(255,255,255,.9)",
            ],
          },
          "fontSizes": Array [
            12,
            14,
            16,
            20,
            24,
            32,
            48,
            64,
          ],
          "fontWeights": Array [
            0,
            300,
            400,
            600,
            700,
          ],
          "fonts": Object {
            "sansSerif": "\\"Source Sans Pro\\", -apple-system, sans-serif",
            "serif": "athelas, georgia, times, serif",
          },
          "heights": Array [
            0,
            16,
            32,
            64,
            128,
            256,
          ],
          "letterSpacings": Array [
            0,
            1,
            2,
            4,
            8,
          ],
          "lineHeights": Object {
            "copy": 1.5,
            "solid": 1,
            "title": 1.25,
          },
          "maxHeights": Array [
            0,
            16,
            32,
            64,
            128,
            256,
          ],
          "maxWidths": Array [
            0,
            16,
            32,
            64,
            128,
            256,
            512,
            768,
            1024,
            1536,
          ],
          "messageStyle": Object {
            "base": Object {
              "backgroundColor": "#f6f6f6",
              "borderColor": "#AAA",
              "color": "#666",
            },
            "danger": Object {
              "backgroundColor": "#fbe9e7",
              "borderColor": "#DC2C10",
              "color": "#841a09",
            },
            "info": Object {
              "backgroundColor": "#eaf6fd",
              "borderColor": "#36ADF1",
              "color": "#206790",
            },
            "success": Object {
              "backgroundColor": "#e9f8f2",
              "borderColor": "#28C081",
              "color": "#18734d",
            },
            "warning": Object {
              "backgroundColor": "#fef5e9",
              "borderColor": "#FD9D28",
              "color": "#975e18",
            },
          },
          "minHeights": Array [
            0,
            16,
            32,
            64,
            128,
            256,
          ],
          "minWidths": Array [
            0,
            16,
            32,
            64,
            128,
            256,
          ],
          "opacity": Object {
            "disabled": 0.4,
          },
          "radii": Array [
            "0",
            "4px",
            "8px",
            "16px",
          ],
          "shadows": Array [
            "0",
            "0px 2px 4px rgba(0, 0, 0, 0.1)",
            "0 7px 14px rgba(50,50,93,.1)",
          ],
          "space": Array [
            0,
            4,
            8,
            16,
            32,
            64,
            128,
            256,
          ],
          "width": Array [
            0,
            16,
            32,
            64,
            128,
            256,
          ],
          "zIndices": Array [
            0,
            9,
            99,
            999,
            9999,
          ],
        },
        "variant": "base",
      },
      "displayName": "Flash",
      "foldedComponentIds": Array [
        "sc-bdVaJa",
        "sc-bwzfXH",
      ],
      "p": Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "sc-bxivhb",
          "isStatic": false,
          "rules": Array [
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "

  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
",
          ],
        },
        "defaultProps": Object {
          "color": "copyColor",
          "fontFamily": "sansSerif",
          "fontSize": 2,
          "fontWeight": 2,
          "lineHeight": "copy",
          "textAlign": "left",
        },
        "displayName": "styled.p",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "sc-bxivhb",
        "target": "p",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      },
      "render": [Function],
      "s": Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "sc-ifAKCX",
          "isStatic": false,
          "rules": Array [
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "

  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
",
          ],
        },
        "defaultProps": Object {
          "color": "copyColor",
          "fontFamily": "sansSerif",
          "fontSize": 2,
          "fontWeight": 2,
          "lineHeight": "copy",
          "textAlign": "left",
        },
        "displayName": "styled.s",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "sc-ifAKCX",
        "target": "s",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      },
      "span": Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "sc-htpNat",
          "isStatic": false,
          "rules": Array [
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "

  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
",
          ],
        },
        "defaultProps": Object {
          "color": "copyColor",
          "fontFamily": "sansSerif",
          "fontSize": 2,
          "fontWeight": 2,
          "lineHeight": "copy",
          "textAlign": "left",
        },
        "displayName": "styled.span",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "sc-htpNat",
        "target": "span",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      },
      "styledComponentId": "sc-EHOje",
      "target": "div",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
  p="3"
  theme={
    Object {
      "borderWidths": Array [
        "0",
        "1px",
        "2px",
        "4px",
      ],
      "borders": Array [
        0,
        "1px solid transparent",
      ],
      "colors": Object {
        "black": "#000e1a",
        "blacks": Array [
          "rgba(0,0,0,.0125)",
          "rgba(0,0,0,.025)",
          "rgba(0,0,0,.05)",
          "rgba(0,0,0,.1)",
          "rgba(0,0,0,.2)",
          "rgba(0,0,0,.3)",
          "rgba(0,0,0,.4)",
          "rgba(0,0,0,.5)",
          "rgba(0,0,0,.6)",
          "rgba(0,0,0,.7)",
          "rgba(0,0,0,.8)",
          "rgba(0,0,0,.9)",
        ],
        "blue": "#007ce0",
        "copyColor": "#3F3D4B",
        "dark-gray": "#333",
        "grey": "#CCC",
        "light-gray": "#eee",
        "light-silver": "#aaa",
        "mid-gray": "#555",
        "moon-gray": "#ccc",
        "navy": "#004175",
        "near-black": "#111",
        "near-white": "#f4f4f4",
        "primary": "#4E3FCE",
        "silver": "#999",
        "transparent": "transparent",
        "white": "#fff",
        "whites": Array [
          "rgba(255,255,255,.0125)",
          "rgba(255,255,255,.025)",
          "rgba(255,255,255,.05)",
          "rgba(255,255,255,.1)",
          "rgba(255,255,255,.2)",
          "rgba(255,255,255,.3)",
          "rgba(255,255,255,.4)",
          "rgba(255,255,255,.5)",
          "rgba(255,255,255,.6)",
          "rgba(255,255,255,.7)",
          "rgba(255,255,255,.8)",
          "rgba(255,255,255,.9)",
        ],
      },
      "fontSizes": Array [
        12,
        14,
        16,
        20,
        24,
        32,
        48,
        64,
      ],
      "fontWeights": Array [
        0,
        300,
        400,
        600,
        700,
      ],
      "fonts": Object {
        "sansSerif": "\\"Source Sans Pro\\", -apple-system, sans-serif",
        "serif": "athelas, georgia, times, serif",
      },
      "heights": Array [
        0,
        16,
        32,
        64,
        128,
        256,
      ],
      "letterSpacings": Array [
        0,
        1,
        2,
        4,
        8,
      ],
      "lineHeights": Object {
        "copy": 1.5,
        "solid": 1,
        "title": 1.25,
      },
      "maxHeights": Array [
        0,
        16,
        32,
        64,
        128,
        256,
      ],
      "maxWidths": Array [
        0,
        16,
        32,
        64,
        128,
        256,
        512,
        768,
        1024,
        1536,
      ],
      "messageStyle": Object {
        "base": Object {
          "backgroundColor": "#f6f6f6",
          "borderColor": "#AAA",
          "color": "#666",
        },
        "danger": Object {
          "backgroundColor": "#fbe9e7",
          "borderColor": "#DC2C10",
          "color": "#841a09",
        },
        "info": Object {
          "backgroundColor": "#eaf6fd",
          "borderColor": "#36ADF1",
          "color": "#206790",
        },
        "success": Object {
          "backgroundColor": "#e9f8f2",
          "borderColor": "#28C081",
          "color": "#18734d",
        },
        "warning": Object {
          "backgroundColor": "#fef5e9",
          "borderColor": "#FD9D28",
          "color": "#975e18",
        },
      },
      "minHeights": Array [
        0,
        16,
        32,
        64,
        128,
        256,
      ],
      "minWidths": Array [
        0,
        16,
        32,
        64,
        128,
        256,
      ],
      "opacity": Object {
        "disabled": 0.4,
      },
      "radii": Array [
        "0",
        "4px",
        "8px",
        "16px",
      ],
      "shadows": Array [
        "0",
        "0px 2px 4px rgba(0, 0, 0, 0.1)",
        "0 7px 14px rgba(50,50,93,.1)",
      ],
      "space": Array [
        0,
        4,
        8,
        16,
        32,
        64,
        128,
        256,
      ],
      "width": Array [
        0,
        16,
        32,
        64,
        128,
        256,
      ],
      "zIndices": Array [
        0,
        9,
        99,
        999,
        9999,
      ],
    }
  }
  variant="info"
>
  Info Flash
</StyledComponent>
`;

exports[`Select component sanity matches success variant snapshot 1`] = `
<StyledComponent
  border="1"
  borderRadius={1}
  fontFamily="sansSerif"
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "sc-EHOje",
        "isStatic": false,
        "rules": Array [
          "
  & {
    box-sizing: border-box;
  }
  ",
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          "
  ",
          [Function],
          "
  ",
          "
  ",
          [Function],
          "
",
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "

  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
",
          "
  ",
          [Function],
          "

  & {
  }

  a {
    font-size: inherit;
    cursor: pointer;
    color: inherit;
    &:hover {
      color: inherit;
    }
  }
",
        ],
      },
      "defaultProps": Object {
        "border": "1",
        "borderRadius": 1,
        "fontFamily": "sansSerif",
        "p": "3",
        "theme": Object {
          "borderWidths": Array [
            "0",
            "1px",
            "2px",
            "4px",
          ],
          "borders": Array [
            0,
            "1px solid transparent",
          ],
          "colors": Object {
            "black": "#000e1a",
            "blacks": Array [
              "rgba(0,0,0,.0125)",
              "rgba(0,0,0,.025)",
              "rgba(0,0,0,.05)",
              "rgba(0,0,0,.1)",
              "rgba(0,0,0,.2)",
              "rgba(0,0,0,.3)",
              "rgba(0,0,0,.4)",
              "rgba(0,0,0,.5)",
              "rgba(0,0,0,.6)",
              "rgba(0,0,0,.7)",
              "rgba(0,0,0,.8)",
              "rgba(0,0,0,.9)",
            ],
            "blue": "#007ce0",
            "copyColor": "#3F3D4B",
            "dark-gray": "#333",
            "grey": "#CCC",
            "light-gray": "#eee",
            "light-silver": "#aaa",
            "mid-gray": "#555",
            "moon-gray": "#ccc",
            "navy": "#004175",
            "near-black": "#111",
            "near-white": "#f4f4f4",
            "primary": "#4E3FCE",
            "silver": "#999",
            "transparent": "transparent",
            "white": "#fff",
            "whites": Array [
              "rgba(255,255,255,.0125)",
              "rgba(255,255,255,.025)",
              "rgba(255,255,255,.05)",
              "rgba(255,255,255,.1)",
              "rgba(255,255,255,.2)",
              "rgba(255,255,255,.3)",
              "rgba(255,255,255,.4)",
              "rgba(255,255,255,.5)",
              "rgba(255,255,255,.6)",
              "rgba(255,255,255,.7)",
              "rgba(255,255,255,.8)",
              "rgba(255,255,255,.9)",
            ],
          },
          "fontSizes": Array [
            12,
            14,
            16,
            20,
            24,
            32,
            48,
            64,
          ],
          "fontWeights": Array [
            0,
            300,
            400,
            600,
            700,
          ],
          "fonts": Object {
            "sansSerif": "\\"Source Sans Pro\\", -apple-system, sans-serif",
            "serif": "athelas, georgia, times, serif",
          },
          "heights": Array [
            0,
            16,
            32,
            64,
            128,
            256,
          ],
          "letterSpacings": Array [
            0,
            1,
            2,
            4,
            8,
          ],
          "lineHeights": Object {
            "copy": 1.5,
            "solid": 1,
            "title": 1.25,
          },
          "maxHeights": Array [
            0,
            16,
            32,
            64,
            128,
            256,
          ],
          "maxWidths": Array [
            0,
            16,
            32,
            64,
            128,
            256,
            512,
            768,
            1024,
            1536,
          ],
          "messageStyle": Object {
            "base": Object {
              "backgroundColor": "#f6f6f6",
              "borderColor": "#AAA",
              "color": "#666",
            },
            "danger": Object {
              "backgroundColor": "#fbe9e7",
              "borderColor": "#DC2C10",
              "color": "#841a09",
            },
            "info": Object {
              "backgroundColor": "#eaf6fd",
              "borderColor": "#36ADF1",
              "color": "#206790",
            },
            "success": Object {
              "backgroundColor": "#e9f8f2",
              "borderColor": "#28C081",
              "color": "#18734d",
            },
            "warning": Object {
              "backgroundColor": "#fef5e9",
              "borderColor": "#FD9D28",
              "color": "#975e18",
            },
          },
          "minHeights": Array [
            0,
            16,
            32,
            64,
            128,
            256,
          ],
          "minWidths": Array [
            0,
            16,
            32,
            64,
            128,
            256,
          ],
          "opacity": Object {
            "disabled": 0.4,
          },
          "radii": Array [
            "0",
            "4px",
            "8px",
            "16px",
          ],
          "shadows": Array [
            "0",
            "0px 2px 4px rgba(0, 0, 0, 0.1)",
            "0 7px 14px rgba(50,50,93,.1)",
          ],
          "space": Array [
            0,
            4,
            8,
            16,
            32,
            64,
            128,
            256,
          ],
          "width": Array [
            0,
            16,
            32,
            64,
            128,
            256,
          ],
          "zIndices": Array [
            0,
            9,
            99,
            999,
            9999,
          ],
        },
        "variant": "base",
      },
      "displayName": "Flash",
      "foldedComponentIds": Array [
        "sc-bdVaJa",
        "sc-bwzfXH",
      ],
      "p": Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "sc-bxivhb",
          "isStatic": false,
          "rules": Array [
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "

  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
",
          ],
        },
        "defaultProps": Object {
          "color": "copyColor",
          "fontFamily": "sansSerif",
          "fontSize": 2,
          "fontWeight": 2,
          "lineHeight": "copy",
          "textAlign": "left",
        },
        "displayName": "styled.p",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "sc-bxivhb",
        "target": "p",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      },
      "render": [Function],
      "s": Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "sc-ifAKCX",
          "isStatic": false,
          "rules": Array [
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "

  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
",
          ],
        },
        "defaultProps": Object {
          "color": "copyColor",
          "fontFamily": "sansSerif",
          "fontSize": 2,
          "fontWeight": 2,
          "lineHeight": "copy",
          "textAlign": "left",
        },
        "displayName": "styled.s",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "sc-ifAKCX",
        "target": "s",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      },
      "span": Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "sc-htpNat",
          "isStatic": false,
          "rules": Array [
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "

  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
",
          ],
        },
        "defaultProps": Object {
          "color": "copyColor",
          "fontFamily": "sansSerif",
          "fontSize": 2,
          "fontWeight": 2,
          "lineHeight": "copy",
          "textAlign": "left",
        },
        "displayName": "styled.span",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "sc-htpNat",
        "target": "span",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      },
      "styledComponentId": "sc-EHOje",
      "target": "div",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
  p="3"
  theme={
    Object {
      "borderWidths": Array [
        "0",
        "1px",
        "2px",
        "4px",
      ],
      "borders": Array [
        0,
        "1px solid transparent",
      ],
      "colors": Object {
        "black": "#000e1a",
        "blacks": Array [
          "rgba(0,0,0,.0125)",
          "rgba(0,0,0,.025)",
          "rgba(0,0,0,.05)",
          "rgba(0,0,0,.1)",
          "rgba(0,0,0,.2)",
          "rgba(0,0,0,.3)",
          "rgba(0,0,0,.4)",
          "rgba(0,0,0,.5)",
          "rgba(0,0,0,.6)",
          "rgba(0,0,0,.7)",
          "rgba(0,0,0,.8)",
          "rgba(0,0,0,.9)",
        ],
        "blue": "#007ce0",
        "copyColor": "#3F3D4B",
        "dark-gray": "#333",
        "grey": "#CCC",
        "light-gray": "#eee",
        "light-silver": "#aaa",
        "mid-gray": "#555",
        "moon-gray": "#ccc",
        "navy": "#004175",
        "near-black": "#111",
        "near-white": "#f4f4f4",
        "primary": "#4E3FCE",
        "silver": "#999",
        "transparent": "transparent",
        "white": "#fff",
        "whites": Array [
          "rgba(255,255,255,.0125)",
          "rgba(255,255,255,.025)",
          "rgba(255,255,255,.05)",
          "rgba(255,255,255,.1)",
          "rgba(255,255,255,.2)",
          "rgba(255,255,255,.3)",
          "rgba(255,255,255,.4)",
          "rgba(255,255,255,.5)",
          "rgba(255,255,255,.6)",
          "rgba(255,255,255,.7)",
          "rgba(255,255,255,.8)",
          "rgba(255,255,255,.9)",
        ],
      },
      "fontSizes": Array [
        12,
        14,
        16,
        20,
        24,
        32,
        48,
        64,
      ],
      "fontWeights": Array [
        0,
        300,
        400,
        600,
        700,
      ],
      "fonts": Object {
        "sansSerif": "\\"Source Sans Pro\\", -apple-system, sans-serif",
        "serif": "athelas, georgia, times, serif",
      },
      "heights": Array [
        0,
        16,
        32,
        64,
        128,
        256,
      ],
      "letterSpacings": Array [
        0,
        1,
        2,
        4,
        8,
      ],
      "lineHeights": Object {
        "copy": 1.5,
        "solid": 1,
        "title": 1.25,
      },
      "maxHeights": Array [
        0,
        16,
        32,
        64,
        128,
        256,
      ],
      "maxWidths": Array [
        0,
        16,
        32,
        64,
        128,
        256,
        512,
        768,
        1024,
        1536,
      ],
      "messageStyle": Object {
        "base": Object {
          "backgroundColor": "#f6f6f6",
          "borderColor": "#AAA",
          "color": "#666",
        },
        "danger": Object {
          "backgroundColor": "#fbe9e7",
          "borderColor": "#DC2C10",
          "color": "#841a09",
        },
        "info": Object {
          "backgroundColor": "#eaf6fd",
          "borderColor": "#36ADF1",
          "color": "#206790",
        },
        "success": Object {
          "backgroundColor": "#e9f8f2",
          "borderColor": "#28C081",
          "color": "#18734d",
        },
        "warning": Object {
          "backgroundColor": "#fef5e9",
          "borderColor": "#FD9D28",
          "color": "#975e18",
        },
      },
      "minHeights": Array [
        0,
        16,
        32,
        64,
        128,
        256,
      ],
      "minWidths": Array [
        0,
        16,
        32,
        64,
        128,
        256,
      ],
      "opacity": Object {
        "disabled": 0.4,
      },
      "radii": Array [
        "0",
        "4px",
        "8px",
        "16px",
      ],
      "shadows": Array [
        "0",
        "0px 2px 4px rgba(0, 0, 0, 0.1)",
        "0 7px 14px rgba(50,50,93,.1)",
      ],
      "space": Array [
        0,
        4,
        8,
        16,
        32,
        64,
        128,
        256,
      ],
      "width": Array [
        0,
        16,
        32,
        64,
        128,
        256,
      ],
      "zIndices": Array [
        0,
        9,
        99,
        999,
        9999,
      ],
    }
  }
  variant="success"
>
  Success Flash
</StyledComponent>
`;

exports[`Select component sanity matches themed snapshot 1`] = `
.c1 {
  padding: 16px;
  border: 1px solid transparent;
  border-radius: 4px;
  border-radius: 4px;
  font-family: "Source Sans Pro",-apple-system,sans-serif;
  color: #666;
  background-color: #f6f6f6;
  border-color: #AAA;
}

.c1 {
  box-sizing: border-box;
}

.c1 a {
  font-size: inherit;
  cursor: pointer;
  color: inherit;
}

.c1 a:hover {
  color: inherit;
}

.c0 {
  font-size: 1em;
  font-family: "Source Sans Pro",-apple-system,sans-serif;
  color: #3F3D4B;
}

<div
  class="c0"
>
  <div
    class="c1"
    font-family="sansSerif"
  >
    Flash
  </div>
</div>
`;

exports[`Select component sanity matches warning variant snapshot 1`] = `
<StyledComponent
  border="1"
  borderRadius={1}
  fontFamily="sansSerif"
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "sc-EHOje",
        "isStatic": false,
        "rules": Array [
          "
  & {
    box-sizing: border-box;
  }
  ",
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          "
  ",
          [Function],
          "
  ",
          "
  ",
          [Function],
          "
",
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "

  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
  ",
          [Function],
          "
",
          "
  ",
          [Function],
          "

  & {
  }

  a {
    font-size: inherit;
    cursor: pointer;
    color: inherit;
    &:hover {
      color: inherit;
    }
  }
",
        ],
      },
      "defaultProps": Object {
        "border": "1",
        "borderRadius": 1,
        "fontFamily": "sansSerif",
        "p": "3",
        "theme": Object {
          "borderWidths": Array [
            "0",
            "1px",
            "2px",
            "4px",
          ],
          "borders": Array [
            0,
            "1px solid transparent",
          ],
          "colors": Object {
            "black": "#000e1a",
            "blacks": Array [
              "rgba(0,0,0,.0125)",
              "rgba(0,0,0,.025)",
              "rgba(0,0,0,.05)",
              "rgba(0,0,0,.1)",
              "rgba(0,0,0,.2)",
              "rgba(0,0,0,.3)",
              "rgba(0,0,0,.4)",
              "rgba(0,0,0,.5)",
              "rgba(0,0,0,.6)",
              "rgba(0,0,0,.7)",
              "rgba(0,0,0,.8)",
              "rgba(0,0,0,.9)",
            ],
            "blue": "#007ce0",
            "copyColor": "#3F3D4B",
            "dark-gray": "#333",
            "grey": "#CCC",
            "light-gray": "#eee",
            "light-silver": "#aaa",
            "mid-gray": "#555",
            "moon-gray": "#ccc",
            "navy": "#004175",
            "near-black": "#111",
            "near-white": "#f4f4f4",
            "primary": "#4E3FCE",
            "silver": "#999",
            "transparent": "transparent",
            "white": "#fff",
            "whites": Array [
              "rgba(255,255,255,.0125)",
              "rgba(255,255,255,.025)",
              "rgba(255,255,255,.05)",
              "rgba(255,255,255,.1)",
              "rgba(255,255,255,.2)",
              "rgba(255,255,255,.3)",
              "rgba(255,255,255,.4)",
              "rgba(255,255,255,.5)",
              "rgba(255,255,255,.6)",
              "rgba(255,255,255,.7)",
              "rgba(255,255,255,.8)",
              "rgba(255,255,255,.9)",
            ],
          },
          "fontSizes": Array [
            12,
            14,
            16,
            20,
            24,
            32,
            48,
            64,
          ],
          "fontWeights": Array [
            0,
            300,
            400,
            600,
            700,
          ],
          "fonts": Object {
            "sansSerif": "\\"Source Sans Pro\\", -apple-system, sans-serif",
            "serif": "athelas, georgia, times, serif",
          },
          "heights": Array [
            0,
            16,
            32,
            64,
            128,
            256,
          ],
          "letterSpacings": Array [
            0,
            1,
            2,
            4,
            8,
          ],
          "lineHeights": Object {
            "copy": 1.5,
            "solid": 1,
            "title": 1.25,
          },
          "maxHeights": Array [
            0,
            16,
            32,
            64,
            128,
            256,
          ],
          "maxWidths": Array [
            0,
            16,
            32,
            64,
            128,
            256,
            512,
            768,
            1024,
            1536,
          ],
          "messageStyle": Object {
            "base": Object {
              "backgroundColor": "#f6f6f6",
              "borderColor": "#AAA",
              "color": "#666",
            },
            "danger": Object {
              "backgroundColor": "#fbe9e7",
              "borderColor": "#DC2C10",
              "color": "#841a09",
            },
            "info": Object {
              "backgroundColor": "#eaf6fd",
              "borderColor": "#36ADF1",
              "color": "#206790",
            },
            "success": Object {
              "backgroundColor": "#e9f8f2",
              "borderColor": "#28C081",
              "color": "#18734d",
            },
            "warning": Object {
              "backgroundColor": "#fef5e9",
              "borderColor": "#FD9D28",
              "color": "#975e18",
            },
          },
          "minHeights": Array [
            0,
            16,
            32,
            64,
            128,
            256,
          ],
          "minWidths": Array [
            0,
            16,
            32,
            64,
            128,
            256,
          ],
          "opacity": Object {
            "disabled": 0.4,
          },
          "radii": Array [
            "0",
            "4px",
            "8px",
            "16px",
          ],
          "shadows": Array [
            "0",
            "0px 2px 4px rgba(0, 0, 0, 0.1)",
            "0 7px 14px rgba(50,50,93,.1)",
          ],
          "space": Array [
            0,
            4,
            8,
            16,
            32,
            64,
            128,
            256,
          ],
          "width": Array [
            0,
            16,
            32,
            64,
            128,
            256,
          ],
          "zIndices": Array [
            0,
            9,
            99,
            999,
            9999,
          ],
        },
        "variant": "base",
      },
      "displayName": "Flash",
      "foldedComponentIds": Array [
        "sc-bdVaJa",
        "sc-bwzfXH",
      ],
      "p": Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "sc-bxivhb",
          "isStatic": false,
          "rules": Array [
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "

  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
",
          ],
        },
        "defaultProps": Object {
          "color": "copyColor",
          "fontFamily": "sansSerif",
          "fontSize": 2,
          "fontWeight": 2,
          "lineHeight": "copy",
          "textAlign": "left",
        },
        "displayName": "styled.p",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "sc-bxivhb",
        "target": "p",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      },
      "render": [Function],
      "s": Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "sc-ifAKCX",
          "isStatic": false,
          "rules": Array [
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "

  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
",
          ],
        },
        "defaultProps": Object {
          "color": "copyColor",
          "fontFamily": "sansSerif",
          "fontSize": 2,
          "fontWeight": 2,
          "lineHeight": "copy",
          "textAlign": "left",
        },
        "displayName": "styled.s",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "sc-ifAKCX",
        "target": "s",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      },
      "span": Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "sc-htpNat",
          "isStatic": false,
          "rules": Array [
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "

  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
  ",
            [Function],
            "
",
          ],
        },
        "defaultProps": Object {
          "color": "copyColor",
          "fontFamily": "sansSerif",
          "fontSize": 2,
          "fontWeight": 2,
          "lineHeight": "copy",
          "textAlign": "left",
        },
        "displayName": "styled.span",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "sc-htpNat",
        "target": "span",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      },
      "styledComponentId": "sc-EHOje",
      "target": "div",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
  p="3"
  theme={
    Object {
      "borderWidths": Array [
        "0",
        "1px",
        "2px",
        "4px",
      ],
      "borders": Array [
        0,
        "1px solid transparent",
      ],
      "colors": Object {
        "black": "#000e1a",
        "blacks": Array [
          "rgba(0,0,0,.0125)",
          "rgba(0,0,0,.025)",
          "rgba(0,0,0,.05)",
          "rgba(0,0,0,.1)",
          "rgba(0,0,0,.2)",
          "rgba(0,0,0,.3)",
          "rgba(0,0,0,.4)",
          "rgba(0,0,0,.5)",
          "rgba(0,0,0,.6)",
          "rgba(0,0,0,.7)",
          "rgba(0,0,0,.8)",
          "rgba(0,0,0,.9)",
        ],
        "blue": "#007ce0",
        "copyColor": "#3F3D4B",
        "dark-gray": "#333",
        "grey": "#CCC",
        "light-gray": "#eee",
        "light-silver": "#aaa",
        "mid-gray": "#555",
        "moon-gray": "#ccc",
        "navy": "#004175",
        "near-black": "#111",
        "near-white": "#f4f4f4",
        "primary": "#4E3FCE",
        "silver": "#999",
        "transparent": "transparent",
        "white": "#fff",
        "whites": Array [
          "rgba(255,255,255,.0125)",
          "rgba(255,255,255,.025)",
          "rgba(255,255,255,.05)",
          "rgba(255,255,255,.1)",
          "rgba(255,255,255,.2)",
          "rgba(255,255,255,.3)",
          "rgba(255,255,255,.4)",
          "rgba(255,255,255,.5)",
          "rgba(255,255,255,.6)",
          "rgba(255,255,255,.7)",
          "rgba(255,255,255,.8)",
          "rgba(255,255,255,.9)",
        ],
      },
      "fontSizes": Array [
        12,
        14,
        16,
        20,
        24,
        32,
        48,
        64,
      ],
      "fontWeights": Array [
        0,
        300,
        400,
        600,
        700,
      ],
      "fonts": Object {
        "sansSerif": "\\"Source Sans Pro\\", -apple-system, sans-serif",
        "serif": "athelas, georgia, times, serif",
      },
      "heights": Array [
        0,
        16,
        32,
        64,
        128,
        256,
      ],
      "letterSpacings": Array [
        0,
        1,
        2,
        4,
        8,
      ],
      "lineHeights": Object {
        "copy": 1.5,
        "solid": 1,
        "title": 1.25,
      },
      "maxHeights": Array [
        0,
        16,
        32,
        64,
        128,
        256,
      ],
      "maxWidths": Array [
        0,
        16,
        32,
        64,
        128,
        256,
        512,
        768,
        1024,
        1536,
      ],
      "messageStyle": Object {
        "base": Object {
          "backgroundColor": "#f6f6f6",
          "borderColor": "#AAA",
          "color": "#666",
        },
        "danger": Object {
          "backgroundColor": "#fbe9e7",
          "borderColor": "#DC2C10",
          "color": "#841a09",
        },
        "info": Object {
          "backgroundColor": "#eaf6fd",
          "borderColor": "#36ADF1",
          "color": "#206790",
        },
        "success": Object {
          "backgroundColor": "#e9f8f2",
          "borderColor": "#28C081",
          "color": "#18734d",
        },
        "warning": Object {
          "backgroundColor": "#fef5e9",
          "borderColor": "#FD9D28",
          "color": "#975e18",
        },
      },
      "minHeights": Array [
        0,
        16,
        32,
        64,
        128,
        256,
      ],
      "minWidths": Array [
        0,
        16,
        32,
        64,
        128,
        256,
      ],
      "opacity": Object {
        "disabled": 0.4,
      },
      "radii": Array [
        "0",
        "4px",
        "8px",
        "16px",
      ],
      "shadows": Array [
        "0",
        "0px 2px 4px rgba(0, 0, 0, 0.1)",
        "0 7px 14px rgba(50,50,93,.1)",
      ],
      "space": Array [
        0,
        4,
        8,
        16,
        32,
        64,
        128,
        256,
      ],
      "width": Array [
        0,
        16,
        32,
        64,
        128,
        256,
      ],
      "zIndices": Array [
        0,
        9,
        99,
        999,
        9999,
      ],
    }
  }
  variant="warning"
>
  Warning Flash
</StyledComponent>
`;
